<resources>
    <string name="app_name">SmdProject</string>
    <string name="socially">Socially</string>
    <string name="create_account">Create An Account and Sign Up</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter your username</string>
    <string name="your_name">Your Name</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="dob">Date of Birth</string>
    <string name="enter_dob">Enter your date of birth</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_of_Person">allen_w</string>
    <string name="signup_text">Don\'t have an Account? &lt;b&gt;Sign up&lt;/b&gt;</string>
    <string name="andrew_m">andrew</string>
    <string name="Search">search</string>
    <string name="have_a_nice_day_bro">Have a nice day Bro</string>
    <string name="movie_heard">I heard about movie</string>
    <string name="desc1">.now</string>
    <string name="evening">See you in evening</string>
    <string name="design">the design is good</string>
    <string name="user_ellis">ellis</string>
    <string name="user_jack">Jack</string>
    <string name="user_william">william</string>
    <string name="nav_camera">Camera</string>
    <string name="username1">Jacob West</string>
    <string name="bio_line_1">Digital goodies designer_@pixsellz</string>
    <string name="bio_line_2">Everything is designed.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_highlight">+</string>
    <string name="new_text">New</string>
    <string name="friends">Friends</string>
    <string name="beauty">Beauty</string>
    <string name="tour">Tour</string>
    <string name="user_jacob">jacob_w</string>
    <string name="posts_count">54</string>
    <string name="posts">Posts</string>
    <string name="followers_count">834</string>
    <string name="followers">Followers</string>
    <string name="following_count">162</string>
    <string name="following">Following</string>
    <string name="hint_search">Search</string>
    <string name="hint_shop">Shop</string>
    <string name="hint_style">Style</string>
    <string name="hint_sports">Sports</string>
    <string name="hint_auto">Auto</string>
    <string name="username3">koan_coleman</string>
    <string name="posts_count1">151</string>
    <string name="posts_label">posts</string>
    <string name="followers_count1">112K</string>
    <string name="followers_label1">followers</string>
    <string name="following_count1">162</string>
    <string name="following_label1">following</string>
    <string name="full_name">Kan Coleman</string>
    <string name="job_title">Blogger</string>
    <string name="bio_text">Have a great day</string>
    <string name="website">koan.co</string>
    <string name="followed_by">Followed by your friend, another friend and 297 others</string>
    <string name="button_following">Following</string>
    <string name="button_message">Message</string>
    <string name="button_email">Email</string>
    <string name="highlight_1">Highlight 1</string>
    <string name="highlight_2">Highlight 2</string>
    <string name="highlight_3">Highlight 3</string>
    <string name="highlight_4">Highlight 4</string>
    <string name="highlight_new">New</string>
    <string name="your_stories">Your stories</string>
    <string name="close_friends">Close Friends</string>
    <string name="search_hint">internshala</string>
    <string name="button_clear">Clear</string>
    <string name="tab_top">Top</string>
    <string name="tab_accounts">Accounts</string>
    <string name="tab_tags">Tags</string>
    <string name="tab_places">Places</string>

    <string name="initials_is">IS</string>
    <string name="username_4">hadi</string>
    <string name="posts_count_1000">1000+ post</string>
    <string name="hashtag_australia"># Australia</string>
    <string name="posts_count_500">500+ post</string>
    <string name="hashtag_australia_america"># australia_america</string>
    <string name="location_australia">Australia B610, Zone</string>
    <string name="posts_count_100">100+ post</string>
    <string name="user_australian_campus">australian campus</string>
    <string name="tag1">Top</string>
    <string name="tag2">Accounts</string>
    <string name="tag3">Tags</string>
    <string name="tag4">Places</string>
    <string name="text_clear">Clear</string>
    <string name="text_hashtag">#</string>

</resources>