<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    android:fitsSystemWindows="true"
    tools:context=".Second_activity">

    <ImageView
        android:id="@+id/middle_arrowSection"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/img_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/middle_logoSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/socially"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/middle_textPara"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/middle_logoSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/baseline_circle_24"
        android:layout_marginTop="20dp"
        app:civ_border_color="@android:color/black"
        app:civ_border_width="4dp"
        app:layout_constraintTop_toBottomOf="@id/middle_textPara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/camera_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/img_7"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_username"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/Firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_first_name"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/Lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_last_name"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/D_Of_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_dob"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_email"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_password"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="Create an Account"
            android:backgroundTint="@color/dark_orange"
            app:cornerRadius="20dp"
            android:layout_marginTop="16dp"/>

        <View
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>